--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 onkeyup="calculateVillagersOdds()" onchange="calculateVillagersOdds()">
             <br></div>
     </div>
+    <div class="result">
+        <canvas id="myChart" width="400" height="400"></canvas>
+    </div>
     <div class="footer">
         <div class="footer-align">
             <span>Made by <b>Alexis#8717</b></span>
@@ -73,7 +76,8 @@
             </a>
         </div>
     </div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </body>
-<script type="text/javascript" src="index.js"></script>
 
 </html>
