undo noreferrer because we love analytics

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="footer">
         <div class="footer-align">
             <span>Made by <b>Alexis#8717</b></span>
-            <a target="_blank" href="https://github.com/alexislours/nmt-calculator" rel="noreferrer">
+            <a target="_blank" href="https://github.com/alexislours/nmt-calculator">
                 <div>
                     <img class="github-logo" src="./github-logo.svg">
                 </div>
